# Rust-Backend

rust_api/: Cargo.toml
rust_api/middleware/: auth.rs
rust_api/src/: main.rs
rust_api/static/: index.html
