[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3.1"

actix-files = "0.6.2"

serde = {version = "1.0", features = ["derive"]}

serde_json = "1.0"

jsonwebtoken = "8.3.0"

sqlx = {version = "0.7", features = ["runtime-tokio-rustls", "postgres"]}

tokio = {version = "1", features = ["full"]}

dotenv = "0.15.0"
